# zotero-arxiv-daily

./: gguf_embedder.py  main.py  pyproject.toml  recommender.py  recommender_gguf.py  tag_scorer.py
.github/workflows/: main.yml  test.yml
